module02/ex11/08_security_groups.tf
resource "aws_security_group" "module02_sg" {
  depends_on = [
    aws_vpc.module02_vpc
  ]

  name        = "module02-sg"
  description = "TCP, SSH"
  vpc_id      = aws_vpc.module02_vpc.id

  ingress {
    from_port = 5000
    to_port = 5000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "output from wordpress server"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
